[gd_scene load_steps=2 format=3 uid="uid://8hax45be61qv"]

[ext_resource type="Script" path="res://Menus/GameMenu/game_menu.gd" id="1_ajngp"]

[node name="GameMenu" type="CanvasLayer"]
script = ExtResource("1_ajngp")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.360784)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -264.0
offset_top = 134.5
offset_right = 264.0
offset_bottom = 211.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="returnToGame" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 9)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Continue"

[node name="MainMenu" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 9)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Main Menu"

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.0
offset_top = -147.5
offset_right = 376.0
offset_bottom = -10.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Game Paused"
horizontal_alignment = 1

[connection signal="pressed" from="HBoxContainer/returnToGame" to="." method="_on_return_to_game_pressed"]
[connection signal="pressed" from="HBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
